<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="39dp"
    android:background="@color/colorText">

    <TextView
        android:id="@+id/sequence"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/number"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/date"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/amount"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/status"
        android:textStyle="bold" />

</LinearLayout>


