<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddAmount">

    <TextView
        android:id="@+id/textView"
        android:layout_width="144dp"
        android:layout_height="51dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="171dp"
        android:text="@string/status"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="144dp"
        android:layout_height="51dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:text="@string/amount"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinner_amount"
        android:layout_width="162dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="171dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/amount_layout"
        android:layout_width="162dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="33dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/spinner_amount">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="144dp"
        android:layout_height="47dp"
        android:layout_marginTop="64dp"
        android:background="@color/colorPrimary"
        android:text="@string/done"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>