<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".activities.AddNewMember">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/overview"
            android:layout_width="109dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor ="@color/colorAccent"
            tools:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/client_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/editorColorPrimary"
                    android:textColorHint="@color/editorColorPrimary" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_client_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/client_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/editorColorPrimary"
                    android:textColorHint="@color/editorColorPrimary" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_gender" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>